support poi major changes